# server/models/__init__.py
@@ -3,5 +3,5 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from server.models.lot_number_body import LotNumberBody
-from server.models.part_number_body import PartNumberBody
+from server.models.lot_info import LotInfo
+from server.models.part_info import PartInfo
