# server/models/part_info.py
@@ -1,0 +1,91 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from server.models.base_model_ import Model
+from server.models.lot_info import LotInfo  # noqa: F401,E501
+from server import util
+
+
+class PartInfo(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, part_number: str=None, lot_info_mega: LotInfo=None):  # noqa: E501
+        """PartInfo - a model defined in Swagger
+
+        :param part_number: The part_number of this PartInfo.  # noqa: E501
+        :type part_number: str
+        :param lot_info_mega: The lot_info_mega of this PartInfo.  # noqa: E501
+        :type lot_info_mega: LotInfo
+        """
+        self.swagger_types = {
+            'part_number': str,
+            'lot_info_mega': LotInfo
+        }
+
+        self.attribute_map = {
+            'part_number': 'part_number',
+            'lot_info_mega': 'lot_info_mega'
+        }
+        self._part_number = part_number
+        self._lot_info_mega = lot_info_mega
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'PartInfo':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The part_info of this PartInfo.  # noqa: E501
+        :rtype: PartInfo
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def part_number(self) -> str:
+        """Gets the part_number of this PartInfo.
+
+
+        :return: The part_number of this PartInfo.
+        :rtype: str
+        """
+        return self._part_number
+
+    @part_number.setter
+    def part_number(self, part_number: str):
+        """Sets the part_number of this PartInfo.
+
+
+        :param part_number: The part_number of this PartInfo.
+        :type part_number: str
+        """
+        if part_number is None:
+            raise ValueError("Invalid value for `part_number`, must not be `None`")  # noqa: E501
+
+        self._part_number = part_number
+
+    @property
+    def lot_info_mega(self) -> LotInfo:
+        """Gets the lot_info_mega of this PartInfo.
+
+
+        :return: The lot_info_mega of this PartInfo.
+        :rtype: LotInfo
+        """
+        return self._lot_info_mega
+
+    @lot_info_mega.setter
+    def lot_info_mega(self, lot_info_mega: LotInfo):
+        """Sets the lot_info_mega of this PartInfo.
+
+
+        :param lot_info_mega: The lot_info_mega of this PartInfo.
+        :type lot_info_mega: LotInfo
+        """
+
+        self._lot_info_mega = lot_info_mega
